<resources>
    <string name="app_name">HouseInspect</string>
    <string name="loginText">Login</string>
    <string name="userName">Enter username</string>
    <string name="password">Enter password</string>
    <string name="reset">Reset</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="donthaveAccount">Don\'t have Account?</string>
    <string name="registerNow">Register Now</string>
    <string name="registerText">Register</string>
    <string name="surname">Surname</string>
    <string name="datebirth">Date of Birth</string>


    <!--Listing for Subsidy Home-->
    <string-array name="non_subsidy_home">
        <item>Demographic Details</item>
        <item>Home Owner Details</item>
        <item>1. Sub-structure/Foundation</item>
        <item>2. Super-structure</item>
        <item>3. Practical Completion</item>
        <item>4. Storm Water</item>
        <item>5. Carpentry</item>
        <item>6. Plumbing</item>
        <item>7. Electrical</item>
        <item>8. Water Proofing</item>
        <item>Practically Completed On</item>
        <item>Submit</item>>
    </string-array>

    <string-array name="subsidy_home">
        <item>Demographic Details</item>
        <item>Home Owner Details</item>
        <item>1. Sub-structure/Foundation</item>
        <item>2. Super-structure</item>
        <item>3. Practical Completion</item>
        <item>4. Storm Water</item>
        <item>Practically Completed On</item>
        <item>Submit</item>>
    </string-array>

    <!-- Race (Indian, Black, White, Coloured, Asian, Other)-->
    <string-array name="race">
        <item>Indian</item>
        <item>Black</item>
        <item>White</item>
        <item>Coloured</item>
        <item>Asian</item>
        <item>Other</item>
    </string-array>
    <!--Family Income-->
    <string-array name="family_income">
        <item>0-R1499</item>
        <item>R1500-R3500</item>
        <item>R3501-R7500</item>
        <item>R7501-ABOVE</item>
    </string-array>

    <!--Province-->
    <string-array name="province">
        <item>Eastern Cape</item>
        <item>Free State</item>
        <item>Gauteng</item>
        <item>KwaZulu-Natal</item>
        <item>Limpopo</item>
        <item>Mpumalanga</item>
        <item>North West</item>
        <item>Northern Cape</item>
        <item>Western Cape</item>
    </string-array>

    <!--non_sub_structure-->
    <string-array name="non_sub_structure">
        <item>1.1 Soil Classification</item>
        <item>1.2 Dolomite areas</item>
        <item>1.3 Site clearance</item>
        <item>1.4 Water logged site</item>
        <item>1.5 Excavations</item>
        <item>1.6 Raft slabs</item>
        <item>1.7 Reinforcement</item>
        <item>1.8 Concrete</item>
        <item>1.9 Masonry</item>
        <item>1.10 Infill of masonry</item>
        <item>1.11 Brickforce W/Ties</item>
        <item>1.12 Filling</item>
        <item>1.13 Surface water disposal</item>
        <item>1.14 Dpm under floors</item>
        <item>1.15 Fabric reinforcement</item>
        <item>1.16 Concrete surface beds</item>
        <item>1.17 Construction joints</item>
        <item>1.18 Basement split level</item>
        <item>1.19 Suspended timber floors</item>
        <item>1.20 Documentation</item>
    </string-array>

    <!--non Super-Structure-->

    <string-array name="non_super_structure">
        <item>2.1 DPC</item>
        <item>2.2 Cavity Walls</item>
        <item>2.3 Masonry</item>
        <item>2.4 Mortar</item>
        <item>2.5 RC concrete</item>
        <item>2.6 Alignment of corners</item>
        <item>2.7 Masonry panels</item>
        <item>2.8 Intersection of walls</item>
        <item>2.9 Building in of frames</item>
        <item>2.10 Chasing</item>
        <item>2.11 Brick force W/ties</item>
        <item>2.12 Control Joints</item>
        <item>2.13 Staircases</item>
        <item>2.14 Circular masonry</item>
        <item>2.15 Lintel design and bearing</item>
        <item>2.16 Suspended Floors</item>
        <item>2.17 Joints in slabs</item>
        <item>2.18 Roof anchors</item>
        <item>2.19 Non-standard system</item>
        <item>2.20 Timber construction</item>
        <item>2.21 Documentation</item>
    </string-array>

    <!--non_practical_completion

-->
    <string-array name="non_practical_completion">
        <item>3.1 Wall Plate</item>
        <item>3.2 Timber Qualitity Size</item>
        <item>3.3 Purlin, beams rafters</item>
        <item>3.4 Roof Pitch</item>
        <item>3.5 Nail plated trusses</item>
        <item>3.6 Site made trusses</item>
        <item>3.7 Hangers and brackets</item>
        <item>3.8 Bracing</item>
        <item>3.9 Pole structures(Thatched)</item>
        <item>3.10 Battens and purlins</item>
        <item>3.11 Roof covering</item>
        <item>3.12 Under tile membranes</item>
        <item>3.13 Valley lining</item>
        <item>3.14 Beam filling</item>
        <item>3.15 Fire Walls</item>
        <item>3.16 Brandering</item>
        <item>3.17 Flashings</item>
        <item>3.18 Geyser installation</item>
        <item>3.19 Concrete roofs</item>
        <item>3.20 Metal lath</item>
        <item>3.21 Plaster mix</item>
        <item>3.22 Weep holes</item>
        <item>3.23 Glazing</item>
        <item>3.24 Documentation</item>
    </string-array>

    <!--NON Storm Water-->
    <string-array name="non_storm_water">
        <item>4.1 Water Ponding</item>
        <item>4.2 Slab above NGL</item>
        <item>4.3 Sewer trenches</item>
        <item>4.4 High banks</item>
        <item>4.5 Boundary walls</item>
        <item>4.6 Pools, etc.</item>
        <item>4.7 Documentation</item>
    </string-array>

    <!--Non Carpentry-->
    <string-array name="non_carpentry">
        <item>5.1 Quality</item>
        <item>5.2 Damage to brickwork</item>
        <item>5.3 Damage to concrete</item>
    </string-array>

    <!--Non Plumbing-->
    <string-array name="non_plumbing">
        <item>6.1 Pipes built in</item>
        <item>6.2 Pipes buily in &lt; 1/3</item>
        <item>6.3 Pipes cast in &lt; 50%</item>
        <item>6.4 Fittings securely fixed</item>
        <item>6.5 Fittings plumb and square</item>
    </string-array>
    <!--Non Electrical-->
    <string-array name="non_electrical">
        <item>7.1 Conduets built in securely</item>
        <item>7.2 Conduets built in &lt; 1/3</item>
        <item>7.3 Concrete cover</item>
        <item>7.4 Fittings securely fixed</item>
        <item>7.5 Fittings plumb and square</item>
    </string-array>
    <!--Non Water Proofing-->
    <string-array name="non_Water_Proofing">
        <item>8.1 Fit for purpose</item>
        <item>8.2 Full-bores</item>
    </string-array>
    <string name="version">Version 2.9</string>
    <string name="finalSubmission">Please complete form before final Submission</string>
    <string name="finalSubmissionApproved">&#8226; Is house inspection approved?</string>
</resources>
