<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".activity.mainactivity.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                style="@style/TextHeading"
                android:textColor="@color/headingText"
                android:textAllCaps="true"
                android:gravity="center"
                android:text="@string/loginText"/>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:background="@drawable/img_grey_border_rect"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/view_UserName"
                android:layout_width="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_height="match_parent"
                android:background="@color/borderGrey"
                android:layout_toRightOf="@+id/imageView_userName"
                android:layout_toEndOf="@+id/imageView_userName"
                android:layout_alignBottom="@+id/editText_LoginUserName"
                android:layout_alignParentTop="true" />
            <EditText
                android:id="@+id/editText_LoginUserName"
                android:padding="@dimen/ediTextPadding"
                android:textSize="@dimen/text_size_normal"
                android:hint="@string/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/view_UserName"
                android:layout_toEndOf="@+id/view_UserName"
                android:textColorHint="@color/hintGrey"/>
            <ImageView
                android:id="@+id/imageView_userName"
                android:layout_width="@dimen/editTextImageWidth"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:padding="2dp"
                android:layout_alignBottom="@+id/view_UserName"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:background="@drawable/img_grey_border_rect"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/view_password"
                android:layout_width="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_height="match_parent"
                android:background="@color/borderGrey"
                android:layout_toRightOf="@+id/imageView_password"
                android:layout_toEndOf="@+id/imageView_password"
                android:layout_alignBottom="@+id/editText_LoginPassword"
                android:layout_alignParentTop="true" />
            <EditText
                android:id="@+id/editText_LoginPassword"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_normal"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/view_password"
                android:layout_toEndOf="@+id/view_password"
                android:textColorHint="@color/hintGrey"/>
            <ImageView
                android:id="@+id/imageView_password"
                android:layout_width="@dimen/editTextImageWidth"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password"
                android:padding="2dp"
                android:layout_alignBottom="@+id/view_password"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <Button
            android:onClick="OnLogin"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/whiteColor"
            android:text="@string/loginText"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_large"/>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="8dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                style="@style/TextNormal"
                android:textColor="@color/blackColor"
                android:text="@string/reset"/>


            <TextView
                android:onClick="onForgotPassword"
                android:padding="8dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                style="@style/TextNormal"
                android:textColor="@color/headingText"
                android:text="@string/forgotPassword"/>
        </RelativeLayout>
        <LinearLayout
            android:onClick="onRegisterClick"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"

            android:background="@drawable/img_heading_border_rect">
            <TextView
                android:layout_width="wrap_content"
                style="@style/TextNormal"
                android:textColor="@color/blackColor"
                android:text="@string/donthaveAccount"/>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/headingText"
                android:text="@string/registerNow"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>
